--- a/package.json
+++ b/package.json
@@ -13,17 +13,15 @@
   "author": "priyanshu agrawal",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "connect-mongo": "^5.0.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.1.0",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "validator": "^13.9.0"
+    "passport-local": "^1.0.0"
   }
 }
